# Software_Modules

./: .gitignore  LICENSE
Gambler_Ruin_Simulation/: README.md  main.cpp  run_parser.sh
Gambler_Ruin_Simulation/include/: generator.h  ticker.h
Gambler_Ruin_Simulation/src/: generator.cpp  parser.cpp  ticker.cpp
Gambler_Ruin_Simulation/tests/: test_unit_generator.cpp
High_Frequency_CSV_Parser/: CMakeLists.txt  README.md  main.cpp
High_Frequency_CSV_Parser/include/: parser.h  ticker.h
High_Frequency_CSV_Parser/src/: parser.cpp  ticker.cpp
High_Frequency_CSV_Parser/tests/: test_integration_generator_parser.cpp  test_unit_parser.cpp  test_unit_ticker.cpp
Order_Book/: CMakeLists.txt  Order_Book.sh  README.md  main.cpp  main_sim.cpp  sim
Order_Book/documentations/: ARCHITECTURE.md  BENCHMARKS.md  PROTOCOLS.md  TODO.md
Order_Book/include/: market_data_receiver.h  order.h  order_book.h  order_pool.h  protocol.h  trade_record.h
Order_Book/src/: market_data_receiver.cpp  order.cpp  order_book.cpp  order_pool.cpp  trade_record.cpp
Order_Book/tests/: test_main.cpp  test_order.cpp  test_order_book.cpp  test_unit_market_data_receiver.cpp  test_unit_order.cpp  test_unit_order_book.cpp
Software_Design_Patterns/: README.md
Software_Design_Patterns/Adapter/: README.md  adapter.cpp
Software_Design_Patterns/Bridge/: README.md  bridge.cpp
Software_Design_Patterns/Builder/: README.md  builder.cpp
Software_Design_Patterns/Chain/: README.md  chain.cpp
Software_Design_Patterns/Command/: README.md  command.cpp
Software_Design_Patterns/Composite/: README.md  composite.cpp
Software_Design_Patterns/Decorator/: README.md  decorator.cpp
Software_Design_Patterns/Facade/: README.md  facade.cpp
Software_Design_Patterns/Factory/: README.md  factory.cpp
Software_Design_Patterns/Flyweight/: README.md  flyweight.cpp
Software_Design_Patterns/Iterator/: README.md  iterator.cpp
Software_Design_Patterns/Mediator/: README.md  mediator.cpp
Software_Design_Patterns/Memento/: README.md  memento.cpp
Software_Design_Patterns/Observer/: README.md  observer.cpp
Software_Design_Patterns/Prototype/: README.md  prototype.cpp
Software_Design_Patterns/Proxy/: README.md  proxy.cpp
Software_Design_Patterns/Singleton/: README.md  singleton.cpp
Software_Design_Patterns/State/: README.md  state.cpp
Software_Design_Patterns/Strategy/: README.md  strategy.cpp
Software_Design_Patterns/Template/: README.md  template.cpp
Software_Design_Patterns/Visitor/: README.md  visitor.cpp
